cluster/apps/oauth2-proxy/oauth2-proxy/networkpolicies/oauth2-proxy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
      app.kubernetes.io/component: authentication-proxy
      app.kubernetes.io/instance: oauth2-proxy
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/component: controller
            "k8s:io.kubernetes.pod.namespace": ingress-nginx
      toPorts:
        - ports:
            - port: "4180"
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: valkey
            app.kubernetes.io/instance: oauth2-proxy
            app.kubernetes.io/component: valkey
      toPorts:
        - ports:
            - port: "6379"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/component: controller
            "k8s:io.kubernetes.pod.namespace": ingress-nginx
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: sso.${BASE_DOMAIN}
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: keycloak
            component: keycloak
            "k8s:io.kubernetes.pod.namespace": keycloak
      toPorts:
        - ports:
            - port: "9000" # keycloak health
              protocol: TCP
